--- a/rest_page.html
+++ b/rest_page.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +8,12 @@
     <link rel="stylesheet" href="https://unpkg.com/flexboxgrid2@7.2.1/flexboxgrid2.min.css">
     <link rel="stylesheet" href="style.css">
     <title>Uber Eats</title>
+    <script> function alertEnter() {
+       alert ('Пока эта кнопка не работает')
+    }
+    </script>
 </head>
+
 <body>
     <header>
         <div class="container nav-container">
@@ -16,22 +22,87 @@
                     <a href="index.html"><img class="logo" src="img/logo.svg" alt="Логотип Uber Eats"></a>
                 </div>
                 <div class="row col-xl-2 col-md-4 col-xs-6 end-xs">
-                    <a class="button" href="#">Войти</a>
+                    <a class="button" href="#" onclick="alertEnter()">Войти</a>
                     <a class="basket hidden-xs" href="#"><img src="img/basket.svg" alt="Корзина"></a>
                 </div>
             </div>
     </header>
+    <main>
+        <div class="banner-container">
+            <div class="container">
+                <div class="row start-xs">
+                    <div class="banner col-lg-5 col-md-7 col-xs-12">
+                        <div class="banner-card">
+                            <h1>Трактир «Пушкин»</h1>
+                            <span class="food-name">₽₽₽ • Европейская</span>
+                            <span class="banner-time">40 - 50 мин</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="line">
+            <div class="container">
+                <ul class="menu">
+                    <li><a href="#">Закуски</a></li>
+                    <li><a href="#">Салаты</a></li>
+                    <li><a href="#">Супы</a></li>
+                    <li><a href="#">Горячие блюда</a></li>
+                    <li><a href="#">Гарниры</a></li>
+                    <li><a href="#">Десерты</a></li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="container">
+            <div class="row between-xs start-xs">
+                <div class="col-xs-12 col-md-6 dish">
+                    <img src="img/seld.png">
+                    <h3>Сельдь на бородинском хлебе</h3>
+                    <span class="addition">С яйцом и огурцом</span>
+                    <span class="price">240 ₽</span>
+                </div>
+                <div class="col-xs-12 col-md-6 dish">
+                    <img src="img/assorti.png">
+                    <h3>Соленья ассорти</h3>
+                    <span class="price">320 ₽</span>
+                </div>
+                <div class="col-xs-12 col-md-6 dish">
+                    <img src="img/mushrooms.png">
+                    <h3>Грибы маринованные</h3>
+                    <span class="price">300 ₽</span>
+                </div>
+                <div class="col-xs-12 col-md-6 dish">
+                    <h3>Сало домашнее с горчицей</h3>
+                    <span class="price">320 ₽</span>
+                    <img src="#">
+                </div>
+                <div class="col-xs-12 col-md-6 dish">
+                    <h3>Малосольная семга</h3>
+                    <span class="price">390 ₽</span>
+                    <img src="#">
+                </div>
+                <div class="col-xs-12 col-md-6 dish">
+                    <h3>Язык говяжий с хреном</h3>
+                    <span class="price">350 ₽</span>
+                    <img src="#">
+                </div>
+
+            </div>
+        </div>
+    </main>
     <footer>
         <div class="container footer-container-1">
             <img class="logo" src="img/white-logo.svg" alt="Логотип Uber Eats">
         </div>
         <div class="container footer-container-2">
             <div class="row between-xs">
-                <div class="col-xs-4">
+                <div class="col-xs-12 col-md-4">
                     <select class="lang-select">
                         <option value="russian" selected>Русский</option>
                         <option value="english">English</option>
-                    </select>
+                    </select><br>
                     <span class="tag"><span>#</span>UberEats</span>
                     <div class="social_block">
                         <a class="facebook" href="#"><img src="img/facebook.svg"></a>
@@ -39,14 +110,14 @@
                         <a href="#"><img src="img/instagram.svg"></a>
                     </div>
                 </div>
-                <div class="col-xs-4">
+                <div class="col-xs-12 col-md-4">
                     <ul class="footer-menu">
                         <li><a href="#">Об UberEats</a></li>
                         <li><a href="#">Станьте партнёром по доставке</a></li>
                         <li><a href="#">Станьте парнёром-рестораном</a></li>
                     </ul>
                 </div>
-                <div class="col-xs-4">
+                <div class="col-xs-12 col-md-4">
                     <ul class="footer-menu">
                         <li><a href="#">Все города</a></li>
                         <li><a href="#">Цены</a></li>
@@ -62,17 +133,18 @@
         </div>
         <div class="container footer-container-4">
             <div class="row between-xs">
-                <div class="col-xs-4">
+                <div class="col-xs-12 col-md-4">
                     <div class="footer-menu"><a href="#">© 2017 Uber Technologies Inc.</a></div>
                 </div>
-                <div class="col-xs-4">
+                <div class="col-xs-12 col-md-4">
                     <div class="footer-menu"><a href="#">Обработка персональных данных</a></div>
                 </div>
-                <div class="col-xs-4">
+                <div class="col-xs-12 col-md-4">
                     <div class="footer-menu"><a href="#">Пользовательское соглашение</a></div>
                 </div>
             </div>
         </div>
     </footer>
 </body>
+
 </html>
