--- a/rest_page.html
+++ b/rest_page.html
@@ -64,46 +64,46 @@
             <div class="row between-xs dishes">
                 <div class="col-xs-12 col-lg-6 dish">
                     <img src="img/seld.png">
-                    <div class="dish-grid">
-                        <h3>Сельдь на бородинском хлебе</h3>
-                        <span class="addition">С яйцом и огурцом</span>
-                        <span class="price">240 ₽</span>
-                    </div>
+                    <ul class="dish-list">
+                        <li class="dish-header">Сельдь на бородинском хлебе</li>
+                        <li class="addition">С яйцом и огурцом</li>
+                        <li class="price price-uniq">240 ₽</li>
+                    </ul>
                 </div>
                 <div class="col-xs-12 col-lg-6 dish">
                     <img src="img/assorti.png">
-                    <div class="dish-grid">
-                        <h3>Соленья ассорти</h3>
-                        <span class="price">320 ₽</span>
-                    </div>
+                    <ul class="dish-list">
+                        <li class="dish-header">Соленья ассорти</li>
+                        <li class="price">320 ₽</li>
+                    </ul>
                 </div>
                 <div class="col-xs-12 col-lg-6 dish">
                     <img src="img/mushrooms.png">
-                    <div class="dish-grid">
-                        <h3>Грибы маринованные</h3>
-                        <span class="price">300 ₽</span>
-                    </div>
+                    <ul class="dish-list">
+                        <li class="dish-header">Грибы маринованные</li>
+                        <li class="price">300 ₽</li>
+                    </ul>
                 </div>
                 <div class="col-xs-12 col-lg-6 dish">
                     <img src="img/salo.png">
-                    <div class="dish-grid">
-                        <h3>Сало домашнее с горчицей</h3>
-                        <span class="price">320 ₽</span>
-                    </div>
+                    <ul class="dish-list">
+                        <li class="dish-header">Сало домашнее с горчицей</li>
+                        <li class="price">320 ₽</li>
+                    </ul>
                 </div>
                 <div class="col-xs-12 col-lg-6 dish">
                     <img src="img/semga.png">
-                    <div class="dish-grid">
-                        <h3>Малосольная семга</h3>
-                        <span class="price">390 ₽</span>
-                    </div>
+                    <ul class="dish-list">
+                        <li class="dish-header">Малосольная семга</li>
+                        <li class="price">390 ₽</li>
+                    </ul>
                 </div>
                 <div class="col-xs-12 col-lg-6 dish">
                     <img src="img/toung.png">
-                    <div class="dish-grid">
-                        <h3>Язык говяжий с хреном</h3>
-                        <span class="price">350 ₽</span>
-                    </div>
+                    <ul class="dish-list">
+                        <li class="dish-header">Язык говяжий с хреном</li>
+                        <li class="price">350 ₽</li>
+                    </ul>
                 </div>
 
             </div>
@@ -145,7 +145,7 @@
             </div>
         </div>
         <div class="container footer-container-3">
-            <a href="#"><img src="img/Download_on_the_App_Store_Badge_US-UK_RGB_blk_092917.svg"></a>
+            <a class="appstore" href="#"><img src="img/Download_on_the_App_Store_Badge_US-UK_RGB_blk_092917.svg"></a>
             <a href="#"><img src="img/en_badge_web_generic-cf6dad406f.svg"></a>
         </div>
         <div class="container footer-container-4">
